test/tests/operators/accept_uds/validation/error_missing_parent.txt
error: failed to inspect UNIX domain socket directory
 --> tests/operators/accept_uds/validation/error_missing_parent.tql:5:12
  |
5 | accept_uds "/tmp/tenzir-uds-missing-parent/test.sock" {
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
  = note: path: /tmp/tenzir-uds-missing-parent
  = note: reason: No such file or directory
